Add testing with tox, add usage and modify API to be more user friendly

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,8 @@
 [pytest]
 addopts =
         -v
-#        --flakes
-#        --random
+        --flakes
+        --random
         --cov wlmodem
         --cov-report=term
         --cov-report=html
