--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,10 @@ deps =
     pytest-remove-stale-bytecode
 commands =
     pytest wlmodem
+passenv =
+    TRAVIS
+    TRAVIS_BRANCH
+    TRAVIS_JOB_ID
 
 [pep8]
 show-source=True
