--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python:
     - "2.7"
     - "3.6"
-install: pip install tox-travis coverage
+install: pip install tox-travis coverage pytest pytest-flakes pytest-cov pytest-random
 script:
     - tox
     - coverage run -m pytest wlmodem
