--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ deps =
     pytest-random
     pytest-remove-stale-bytecode
 commands =
-    pytest wlmodem
+    pytest -c pytest_tox.ini wlmodem
 passenv =
     TRAVIS
     TRAVIS_BRANCH
