--- a/tox.ini
+++ b/tox.ini
@@ -10,11 +10,7 @@ deps =
     pytest-random
     pytest-remove-stale-bytecode
 commands =
-    pytest -c pytest_tox.ini wlmodem
-passenv =
-    TRAVIS
-    TRAVIS_BRANCH
-    TRAVIS_JOB_ID
+    pytest wlmodem
 
 [pep8]
 show-source=True
