--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: python
 python:
     - "2.7"
     - "3.6"
-install: pip install tox-travis coverage pytest
+install: pip install coverage pytest pytest-flakes pytest-cov pytest-random
 script:
-    - tox
-    - coverage run -m pytest wlmodem
-    - coverage report -m
+    - pytest wlmodem
+#    - coverage run -m pytest wlmodem
+#    - coverage report -m
 after_success:
   - coveralls
