--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,11 @@
 [pytest]
 addopts =
         -v
+        --flakes
+        --random
+        --cov wlmodem
+        --cov-report=term-missing
+        --cov-report=html
+        --doctest-modules
+flakes-ignore =
+        docs/source/conf.py ALL
