--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install: pip install coverage pytest pytest-flakes pytest-cov pytest-random
 script:
     - python setup.py develop
     - pytest wlmodem
-#    - coverage run -m pytest wlmodem
-#    - coverage report -m
+    - coverage run -m pytest wlmodem
+    - coverage report -m
 after_success:
   - coveralls
