--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python:
     - "2.7"
     - "3.6"
-install: pip install coverage pytest pytest-flakes pytest-cov pytest-random
+install: pip install coverage python-coveralls pytest pytest-flakes pytest-cov pytest-random
 script:
     - python setup.py develop
     - pytest wlmodem
