--- a/pytest.ini
+++ b/pytest.ini
@@ -3,9 +3,9 @@ addopts =
         -v
         --flakes
         --random
-        --cov wlmodem
-        --cov-report=term-missing
-        --cov-report=html
+#        --cov wlmodem
+#        --cov-report=term-missing
+#        --cov-report=html
         --doctest-modules
 flakes-ignore =
         docs/source/conf.py ALL
