--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,8 @@
 name: Publish PYPI
 
-on: 
+on:
   push:
-    branches: 
+    branches:
       - master
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
         python: [2.7, 3.6]
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
@@ -21,6 +21,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install coverage python-coveralls pytest pytest-flakes pytest-cov pytest-random
+    - name: Setup and coverage
         python setup.py develop
         coverage run -m pytest wlmodem
         coverage report -m
