--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install coverage python-coveralls pytest pytest-flakes pytest-cov pytest-random
     - name: Setup and coverage
+      run: |
         python setup.py develop
         coverage run -m pytest wlmodem
         coverage report -m
