--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install coverage python-coveralls pytest pytest-flakes pytest-cov pytest-random
+        python -m pip install coverage python-coveralls pytest pytest-flakes pytest-cov pytest-random
     - name: Setup and coverage
       run: |
         python setup.py develop
